<resources>
    <string name="app_name">WaterBalanceTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="_250ml">250ml</string>
    <string name="_350ml">350ml</string>
    <string name="_490ml">490ml</string>
    <string name="_1000ml">1000ml</string>
</resources>