<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/MyMaterialTheme">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00305A"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/subfabs_margin"
        android:text="@string/_1000ml"
        app:icon="@drawable/ic_fastfood_24px"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/blue5"
        app:iconTint="@android:color/white"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/subfabs_margin"
        android:text="@string/_490ml"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/blue5"
        app:icon="@drawable/ic_local_drink_24px"
        app:iconTint="@android:color/white"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/subfabs_margin"
        android:text="@string/_350ml"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/blue5"
        app:icon="@drawable/ic_local_cafe_24px"
        app:iconTint="@android:color/white"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/subfabs_margin"
        android:text="@string/_250ml"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/blue5"
        app:icon="@drawable/ic_local_bar_24px"
        app:iconTint="@android:color/white"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/blue5"
        android:text="Add amount"
        app:icon="@drawable/add_24px"
        app:iconTint="@android:color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>